Adding documentation with swag, on user endpoint
